--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,2 @@
-VITE_AUTH_API_BASE_URL=/api/v1
-VITE_CLIENTS_API_BASE_URL=/api/v1
-VITE_DEV_PROXY_TARGET=https://ata-exercises-extraordinary-parliament.trycloudflare.com
+VITE_AUTH_API_BASE_URL=https://volume-sage-nodes-titten.trycloudflare.com/api/v1
+VITE_CLIENTS_API_BASE_URL=https://volume-sage-nodes-titten.trycloudflare.com/api/v1
