Add AI assistant mention and integration OAuth handling

--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,5 @@
-VITE_AUTH_API_BASE_URL=/api/v1
-VITE_CLIENTS_API_BASE_URL=/api/v1
-VITE_DEV_PROXY_TARGET=https://ata-exercises-extraordinary-parliament.trycloudflare.com
+VITE_AUTH_API_BASE_URL=https://volume-sage-nodes-titten.trycloudflare.com/api/v1
+#VITE_DEV_PROXY_TARGET=http://localhost:5174
+
+VITE_CLIENTS_API_BASE_URL=https://volume-sage-nodes-titten.trycloudflare.com/api/v1
+VITE_AI_ASSISTANT_API_BASE_URL=https://volume-sage-nodes-titten.trycloudflare.com/api/v1
